# oc_p8

./: .gitattributes  .gitignore  NOTES.MD  README.md  hello.py  metrics.csv  pyproject.backup.toml  pyproject.toml  requirements-sm.txt
.github/workflows/: run-build-deploy-app.yml  run-build-deploy-ui.yml
app/: Dockerfile  api.ipynb  data.py  datagenerator.py  loss.py  main.py  requirements.txt  requirements_nb.txt  utils_and_constants.py
app/model/: best_model.keras  model_metric.pkl
front/: .dockerignore  Dockerfile  constants.py  main.py  notebook.ipynb  requirements.txt  results.json  utils_and_constants.py
notebooks/: api_draft.ipynb  archive.py  modelisation.ipynb  modelisation_draft.ipynb  notebook.ipynb  notes.ipynb  utils_and_constants.py
notes/: session_2025_01_17.md  session_2025_01_31.md  session_2025_02_07.md  session_2025_02_14.md  session_2025_02_21.md
