[project]
name = "oc-p8"
version = "0.1.0"
description = "Image segmentation for self-driving cars"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "albumentations>=2.0.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "tensorflow>=2.18.0",
]
test = []
prod = []
