[project]
name = "oc-p8"
version = "0.1.0"
description = "Image segmentation for self-driving cars"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "albumentations>=2.0.3",
    "focal-loss>=0.0.7",
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "pydot>=3.0.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "segmentation-models>=1.0.1",
    "tensorflow==2.9.1",
    "tqdm>=4.67.1",
]
test = []
prod = []
